# whisper-cli

./: .gitignore  CLAUDE.md  DECISIONS.md  NEXT_STEPS.md  PROJECT_STATUS.md  pyproject.toml  whisper_watcher.py
scripts/: dispatch_78935777.py  dispatch_brief.py  preflight.py  tiktok_brief.py
tests/: test_behavioral.py  test_integration.py  test_unit.py
whisper_cli/: cli.py  clipper.py  config.py  dedupe.py  downloader.py  scanner.py  snippety.py  state.py  summarizer.py  transcriber.py
